# insights-mcp

./: .env  .gitignore  .pre-commit-config.yaml  .spellcheck-en-custom.txt  .spellcheck.yml  .yamllint  AGENTS.md  CLAUDE.md  Containerfile  HACKING.md  Makefile  README.md  VERSION_HANDLING.md  catalog-info.base.yaml  catalog-info.yaml  mkdocs.yml  pyproject.toml  renovate.json  server.json  toolsets.md  usage.md
.github/workflows/: build.yaml  lint.yaml  publish-mcp.yaml  rbac-manifest-weekly.yaml  test.yaml
.tekton/: insights-mcp-pull-request.yaml  insights-mcp-push.yaml  red-hat-lightspeed-mcp-pull-request.yaml  red-hat-lightspeed-mcp-push.yaml
claude_desktop/: manifest.json  manifest.json.template
configs/: tool_rest_map.json  upstream_refs.json
docs/mkdocs/: HACKING.md  index.md  lean-business-case.md  toolsets.md  usage.md
scripts/: __init__.py  generate_catalog_info.py  generate_diagrams.py  generate_tool_rbac_manifest.py  import_rbac_config_roles.py  insights-mcp-cli  merge_skill_header.py  parse_openapi_permissions.py  patch_generated_cli.py  prepare_mkdocs.py  red-hat-lightspeed-mcp-cli  scrape_upstream_rbac.py  set_mcp_registry_version.py
scripts/mcp_registry/: __init__.py  version.py
skills/insights-mcp/: SKILL.md  SKILL.md.header.yaml
skills/red-hat-lightspeed-mcp/: SKILL.md  SKILL.md.header.yaml
src/advisor_mcp/: __init__.py  server.py  test_prompts.md
src/advisor_mcp/tests/: __init__.py  conftest.py  test_get_active_rules.py  test_get_hosts_details_for_rule.py  test_get_hosts_details_hitting_a_rule.py  test_get_hosts_hitting_a_rule.py  test_get_recommendations_statistics.py  test_get_recommendations_stats.py  test_get_rule_by_text_search.py  test_get_rule_details.py  test_get_rule_from_node_id.py  test_mcp_tool_validation.py
src/content_sources_mcp/: __init__.py  server.py  test_prompts.md
src/content_sources_mcp/tests/: conftest.py  test_mcp_tool_validation.py
src/image_builder_mcp/: README.md  __init__.py  client.py  server.py
src/image_builder_mcp/tests/: conftest.py  test_blueprint_compose.py  test_create_blueprint.py  test_get_blueprint_details.py  test_get_blueprints.py  test_get_compose_details.py  test_get_composes.py  test_get_distributions.py  test_get_openapi.py  test_llm_integration_easy.py  test_llm_integration_hard.py  test_mcp_tool_validation.py  (+1 more)
src/insights_mcp/: __init__.py  __main__.py  async_utils.py  catalog_tools.py  cli_catalog.py  cli_list_tools.py  cli_shim.py  cli_transport.py  client.py  config.py  dashboard_ui.py  errors.py  mcp.py  mcps.py  oauth.py  readwrite_tools.py  server.py  server_cli.py  session_cache.py  toolsets.py
src/inventory_mcp/: __init__.py  inventory_dashboard.css  inventory_dashboard.html  server.py  test_prompts.md
src/mcp_rh_auth/: README.md  __init__.py  http.py  provider.py
src/planning_mcp/: __init__.py  common.py  server.py  test_prompts.md
src/rbac_mcp/: README.md  __init__.py  access.py  server.py  test_prompts.md
src/remediations_mcp/: __init__.py  server.py  test_prompts.md
src/rhel_advisor_mcp/: __init__.py  server.py  test_prompts.md
src/rhsm_mcp/: __init__.py  server.py  test_prompts.md
src/tools/: __init__.py  common.py  reduce_openapi.py
src/vulnerability_mcp/: __init__.py  cve_dashboard.css  cve_dashboard.html  server.py  test_prompts.md
tests/: README_TEST_PATTERNS.md  conftest.py  deepeval_eval_compat.py  llama_index_non_iterable_bool_patch.py  oauth_utils.py  test_auth.py  test_branding.py  test_catalog_tools.py  test_cli_arguments.py  test_cli_catalog.py  test_cli_transport.py  test_cursor_tool_naming.py  test_dashboard_ui.py  test_disabled_write_tools_resource.py  test_generated_cli.py  test_get_instructions.py  test_header_auth.py  test_insights_mcp_server_factory.py  test_mcp_api.py  test_mcp_registry_version.py  test_merge_skill_header.py  test_multiuser_integration.py  test_oauth_client.py  test_oauth_provider.py  test_patch_generated_cli.py  test_patterns.py  test_rbac_manifest_coverage.py  test_refresh_token_auth.py  test_tool_is_error.py  utils.py  utils_agent.py  utils_rubric.py
tests/fixtures/: rbac_config_excerpt.yml
(+56 files in other folders)
