[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insights-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Red Hat Insights"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Florian Schüller", email = "fschulle@redhat.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.10.1",
    "requests",
    "PyJWT",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "types-requests",
    "pylint",
    "autopep8",
    "deepeval",
    "llama-index",
    "llama-index-core",
    "llama-index-tools-mcp",
    "llama-index-llms-openai",
]

[project.scripts]
image-builder-mcp = "image_builder_mcp.server:main"

[project.urls]
Homepage = "https://github.com/RedHatInsights/insights-mcp"
Repository = "https://github.com/RedHatInsights/insights-mcp"
Issues = "https://github.com/RedHatInsights/insights-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pylint.format]
max-line-length = 120

[tool.autopep8]
max_line_length = 120

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests", "src"]
