[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insights-mcp"
version = "0.0.0"
description = "A Model Context Protocol server for Red Hat Insights"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Florian Schüller", email = "fschulle@redhat.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.3",
    "requests",
    "PyJWT",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-subtests",
    "mypy",
    "types-requests",
    "pylint",
    "autopep8",
    "deepeval",
    "llama-index",
    "llama-index-core",
    "llama-index-tools-mcp",
    "llama-index-llms-openai",
]
planning = [
    "rubric-kit==0.1.*",
]

[project.scripts]
insights-mcp = "insights_mcp.server:main"
red-hat-lightspeed-mcp = "insights_mcp.server:main"

[project.urls]
Homepage = "https://github.com/RedHatInsights/insights-mcp"
Repository = "https://github.com/RedHatInsights/insights-mcp"
Issues = "https://github.com/RedHatInsights/insights-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
insights_mcp = ["assets/*.png"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = ["fixme"]

[tool.autopep8]
max_line_length = 120

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E4", "E7", "E9", "F",  # Default rules - Pyflakes (`F`) and a subset of the pycodestyle (`E`)
    "E",                    # pycodestyle rules - superset of pep8 (but still WIP https://github.com/astral-sh/ruff/issues/2402)
    "F",                    # pyflakes
    "I",                    # isort
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests", "src"]

[dependency-groups]
dev = [
    "pytest-subtests>=0.14.2",
]
